# moomoo

./: .gitignore  README.md  main.py  ocr_color_extract.py  ocr_monitor.sh  pyproject.toml  send_sms_twilio.py
helper_scripts/: easyocr_ocr.py  get_crop_coords.py  ocr_easyocr.py  send_sms_vonage.py  template_match.py
screenshots/: ocr_log.txt
